# qxtglobalshortcut5

./: CMakeLists.txt
gui/: qxtglobalshortcut_win.cpp
